# xmrigiso-server-validator

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: args.rs  host.rs  main.rs
src/misc/: LICENSE-boilerplate
